--- a/ifood-music.yml
+++ b/ifood-music.yml
@@ -8,3 +8,9 @@ spotify:
   access:
     id: e3804acbf8ca4440a33206c36f903f55
     secret: a344b44bf79f4d5eb20a4a54e8709afd
+
+openweather:
+  endpoints:
+    currentWeather: 'https://api.openweathermap.org/data/2.5/weather'
+  access:
+    apikey: '2d0feff4ab38bbe9dc34faa9725c3e2d'
