Ajustando yml ifood-music

--- a/ifood-music.yml
+++ b/ifood-music.yml
@@ -23,3 +23,7 @@ eureka:
     instance:
         leaseRenewalIntervalInSeconds: 1
         leaseExpirationDurationInSeconds: 2
+
+ribbon:
+    eureka:
+        enabled: true
