--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -5,6 +5,7 @@ eureka:
         serviceUrl:
             defaultZone: '${EUREKA_URL:http://localhost:9595}/eureka/'
         registerWithEureka: false
+	fetchRegistry: true
 
 zuul:
     prefix: /api
