--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -2,6 +2,7 @@ server:
     port: '${PORT:9000}'
 eureka:
     client:
+	fetchRegistry: true
         serviceUrl:
             defaultZone: '${EUREKA_URL:http://localhost:9595}/eureka/'
         registerWithEureka: false
