--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -1,12 +1,13 @@
 server:
     port: '${PORT:9000}'
+
+
 eureka:
-    client:
+  client:
+    registerWithEureka: false
+    fetchRegistry: true
         serviceUrl:
             defaultZone: '${EUREKA_URL:http://localhost:9595}/eureka/'
-        registerWithEureka: true
-        fetchRegistry: true
-
 ribbon:
     eureka:
         enabled: true
