--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -1,23 +1,19 @@
 server:
     port: '${PORT:9000}'
-
-
 eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: true
+    client:
         serviceUrl:
             defaultZone: '${EUREKA_URL:http://localhost:9595}/eureka/'
+        registerWithEureka: false
 ribbon:
     eureka:
         enabled: true
-
 zuul:
     prefix: /api
     routes:
         music:
             path: '/playlist/suggestion/**'
-            serviceId: IFOOD-MUSIC
+            serviceId: ifood-music
 endpoints:
     routes:
         sensitive: false
